--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-mongoDB_URL= "mongodb+srv://syntax:syntax@cluster0.jc9atjw.mongodb.net/"
+mongoDB_URL=mongodb+srv://syntax:syntax@cluster0.jc9atjw.mongodb.net/
