--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.4"
+    "mongoose": "^7.5.4",
+    "nodemon": "^3.0.1"
   },
   "name": "backend",
   "version": "1.0.0",
