--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.4",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "twilio": "^4.18.1"
   },
   "name": "backend",
   "version": "1.0.0",
