--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "recordrtc": "^5.6.2",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
